# flexnlp-ila

./: .gitignore  CMakeLists.txt  README.md  ilasim.sh  sim_main.cc
app/: main.cc  sim_main.cc
backup/: compute.cc  print_result.cc  sim_main.cc
data/: axi_commands_10_LSTM_timesteps_with_clustered_weights_in_4PEs_with_comments.txt  axi_commands_1_LSTM_timesteps_clustered_weights_with_rd.txt  axi_commands_1_LSTM_timesteps_clustered_weights_with_read_commands.txt  axi_commands_for_2_lstm_64x64.txt  axi_commands_for_2_lstm_64x64_with_rd.txt  axi_commands_for_GRU64x64_8bits_1_timestep_4PEs.csv  axi_commands_for_GRU64x64_8bits_1_timestep_4PEs_with_rd.csv  axi_commands_for_RNN64x64_8bits_1_timestep_4PEs.csv  axi_commands_for_RNN64x64_8bits_1_timestep_4PEs_with_rd.csv  axi_commands_for_attention_ila2.csv  axi_commands_for_kmeans_clustering_for_LSTM_4_timesteps_zero_first_enabled_4PEs_with_rd.csv  axi_commands_for_layernorm.csv  axi_commands_for_layernorm_ila2.csv  axi_commands_for_layernorm_with_rds.csv  axi_commands_for_maxpool_with_read_commands.txt
data/prog_frag/: flex_10_lstm_clustered.json  flex_2_lstm_64x64.json  flex_4_lstm_clustered.json  flex_gru_64x64.json  flex_layernorm.json  flex_maxpool.json  flex_rnn_64x64.json
include/flex/: adpfloat_spec.h  flex.h  gb_addr_map.h  gb_attention.h  gb_config.h  gb_control.h  gb_core.h  gb_layer_norm.h  gb_layer_reduce.h  gb_zero_padding.h  interface.h  pe_act_unit.h  pe_addr_map.h  pe_config.h  pe_core.h  top_config.h  uninterpreted_func.h  util.h
misc/: gb_attention.json  gb_control.json  gb_core_mem_mngr_large.json  gb_core_mem_mngr_small.json  gb_layer_norm.json  gb_layer_reduce.json  gb_zero_padding.json  pe_act_mngr.json  pe_act_vector_0_15.json  pe_act_vector_16_31.json  pe_cluster_table_first.json  pe_cluster_table_second.json  pe_mem_mngr_first.json  pe_mem_mngr_second.json  pe_rnn_layer_sizing.json
script/: init.py
src/: arch_state_gb.cc  arch_state_pe.cc  arch_state_shared.cc  config_instr_gb.cc  config_instr_pe.cc  config_state_gb.cc  config_state_pe.cc  flex.cc  flex_load.cc  gb_attention.cc  gb_control.cc  gb_core_load.cc  gb_core_store.cc  gb_internal.cc  gb_layer_norm.cc  gb_layer_reduce.cc  gb_layer_reduce_fsm.cc  gb_layer_reduce_verif.cc  gb_zero_padding.cc  init_conditions.cc  pe_act.cc  pe_core.cc  pe_core_store.cc  pe_internal.cc  pe_rnn_layer_sizing.cc  pe_store.cc  top_input.cc  util.cc
template/: CMakeLists.txt.top.in  header.h.in  main.cc.in  source.cc.in
tool/: axi_linear256x64_T10_fixed.csv  axi_linear256x64_T10_fixed_with_rd.csv  extract_test_input.cc  flexnlp_axi_rd_commands_gen.cc  flexnlp_axi_rd_gen.py  instr_template_gen.cc  license_header_helper.py  lstm_testbench.cc  makefile  prog_frag_gen.cc  run_systemc_pg.sh  systemc_playground.cc
uninterpreted_func/: uninterpreted_func.cc  uninterpreted_func_int8.cc  uninterpreted_func_place_holder.cc
utils/: axi_commands_for_maxpool.csv  extract_test_input.cc  flexnlp_axi_rd_commands_gen.cc  lstm_testbench_input.txt  read_commands.txt  systemc_playground.cc
